--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "dependencies": {
     "cerebro-tools": "^0.1.8",
-    "cerebro-ui": "^0.0.16"
+    "cerebro-ui": "^0.0.16",
+    "nzh": "^1.0.4"
   },
   "devDependencies": {
-    "cerebro-scripts": "0.0.25"
+    "cerebro-scripts": "0.0.25",
+    "jest": "^24.5.0",
+    "jest-environment-jsdom": "^24.5.0"
   },
   "main": "dist/index.js",
   "keywords": [
@@ -17,6 +20,7 @@
     "start": "cerebro-scripts start",
     "build": "cerebro-scripts build",
     "test": "cerebro-scripts test",
+    "jest": "jest --watch",
     "clear": "cerebro-scripts clear",
     "prepublish": "yarn clear && yarn build"
   }
